--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,27 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.glassfish.main.extras</groupId>
             <artifactId>glassfish-embedded-all</artifactId>
             <version>4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+          <artifactId>jersey-test-framework-provider-simple</artifactId>
+          <version>2.1</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>com.googlecode.jmockit</groupId>
+          <artifactId>jmockit</artifactId>
+          <version>1.3</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -49,6 +61,11 @@
     </dependencies>
 
     <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -64,12 +81,74 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-test-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/integration-test/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.15</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.class</include>
+                    </includes>
+                    <excludedGroups>jp.co.ctc_g.javaee_rest_sample.util.integration.IntegrationTest</excludedGroups>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.15</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.15</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <groups>jp.co.ctc_g.javaee_rest_sample.util.integration.IntegrationTest</groups>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/*IntegrationTestA.class</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -115,8 +194,7 @@
                                 </resource>
                                 <resource>
                                     <directory>src/test/resources</directory>
-                                </resource>
-                            </resources>
+                                </resource>                            </resources>
                         </configuration>
                     </execution>
                     <execution>
@@ -152,6 +230,52 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.glassfish.embedded</groupId>
+                <artifactId>maven-embedded-glassfish-plugin</artifactId>
+                <version>4.0</version>
+                <configuration>
+                    <goalPrefix>embedded-glassfish</goalPrefix>
+                    <app>${basedir}/target/javaee-rest-sample-1.0-SNAPSHOT.war</app>
+                    <name>test</name>
+                    <contextRoot>test</contextRoot>
+                    <ports>
+                        <http-listener>8080</http-listener>
+                        <https-listener>8181</https-listener>
+                    </ports>
+                    <autoDelete>true</autoDelete>
+                </configuration>
+                <executions>
+           <execution>
+              <id>start-glassfish</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                 <goal>start</goal>
+              </goals>
+           </execution>
+           <execution>
+              <id>glassfish-deploy</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                 <goal>deploy</goal>
+              </goals>
+           </execution>
+           <execution>
+              <id>glassfish-undeploy</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                 <goal>undeploy</goal>
+              </goals>
+           </execution>
+           <execution>
+              <id>stop-glassfish</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                 <goal>stop</goal>
+              </goals>
+           </execution>
+        </executions>
             </plugin>
         </plugins>
     </build>
