--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+        
     <dependencies>
         <dependency>
             <groupId>org.dbunit</groupId>
@@ -30,18 +30,24 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
         <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.0</version>
+            <scope>test</scope>
+        </dependency>
+<!--        <dependency>
             <groupId>org.glassfish.main.extras</groupId>
             <artifactId>glassfish-embedded-all</artifactId>
             <version>4.0</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
           <groupId>com.googlecode.jmockit</groupId>
           <artifactId>jmockit</artifactId>
