--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         
     <dependencies>
         <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>1.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>2.4.9</version>
@@ -42,17 +48,17 @@
             <version>2.5.0</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>org.glassfish.main.extras</groupId>
             <artifactId>glassfish-embedded-all</artifactId>
             <version>4.0</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>-->
         <dependency>
-          <groupId>com.googlecode.jmockit</groupId>
-          <artifactId>jmockit</artifactId>
-          <version>1.3</version>
-          <scope>test</scope>
+            <groupId>com.googlecode.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -139,7 +145,7 @@
                     <source>1.7</source>
                     <target>1.7</target>
                     <showDeprecation>true</showDeprecation>
-<!--                    <compilerArguments>
+                    <!--                    <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>-->
                 </configuration>
@@ -259,7 +265,8 @@
                                 </resource>
                                 <resource>
                                     <directory>src/test/resources</directory>
-                                </resource>                            </resources>
+                                </resource>                            
+                            </resources>
                         </configuration>
                     </execution>
                     <execution>
