--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.jayway.restassured</groupId>
             <artifactId>json-path</artifactId>
             <version>1.8.1</version>
@@ -338,6 +344,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.googlecode.flyway</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+                    <url>jdbc:h2:file:~/.unit/spring-jpa-sample</url>
+                    <user>sa</user>
+                    <password></password>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>1.3.172</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
