--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
                     <source>1.7</source>
                     <target>1.7</target>
                     <showDeprecation>true</showDeprecation>
+                    <compilerArgument>-Xlint</compilerArgument>
                     <!--                    <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>-->
