--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -114,6 +120,12 @@
             <version>1.5.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/m2repo/ojdbc6.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -222,7 +234,7 @@
                         </goals>
                         <configuration>
                             <includes>
-                                <include>**/*sampleIntegrationTest.class</include>
+                                <include>**/*IntegrationTest.class</include>
                             </includes>
                         </configuration>
                     </execution>
